アカウント詳細画面のパスキー登録ボタンのスタイル定義を designer.primary_button で置き換える

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -46,10 +46,8 @@
               <% end %>
             </ul>
           <% end %>
-          <div>
-            <button data-action="passkeys#register" class="bg-black text-white py-3 px-6 border-2 border-black hover:bg-gray-800 cursor-pointer">
-              新しいパスキーを登録
-            </button>
+          <div class="flex justify-center">
+            <%= button_tag "新しいパスキーを登録", class: designer.primary_button(size: :lg), data: { action: "passkeys#register" } %>
           </div>
         </div>
       </div>
