--- a/app/views/email_address_verifications/show.html.erb
+++ b/app/views/email_address_verifications/show.html.erb
@@ -13,7 +13,7 @@
       </p>
 
       <div class="flex justify-center">
-        <%= form.submit "アカウント登録", class: "bg-black hover:bg-gray-800 focus:bg-gray-700 focus:ring-2 focus:ring-gray-400 focus:outline-none text-white py-4 px-12 border-2 border-black text-xl tracking-widest cursor-pointer" %>
+        <%= form.submit "アカウント登録", class: designer.primary_button(size: :lg) %>
       </div>
     <% end %>
   </div>
