--- a/app/views/kaminari/_last_page.html.erb
+++ b/app/views/kaminari/_last_page.html.erb
@@ -7,4 +7,4 @@
     remote:        data-remote
 -%>
 <%= link_to t('views.pagination.last').html_safe, url, {remote: remote,
-  class: "px-3 py-2 border border-black text-black hover:text-white bg-white hover:bg-black transition duration-200"} %>
+  class: "px-3 py-2 #{designer.secondary_button(size: :no_padding)}"} %>
