--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -45,16 +45,12 @@
 
     <div class="p-8">
       <h2 class="text-2xl text-red-700 tracking-wide mb-4 text-center">取り消し不可の操作</h2>
-      <button
-        class="block min-w-3xs p-4 mx-auto mb-4 bg-white hover:bg-red-700 focus:bg-red-700 border-2 border-red-700 text-xl text-red-700 hover:text-white focus:text-white tracking-widest cursor-pointer"
-        data-action="click->company-detail#openCompanyExitDialog">
-        事業所から脱退する
-      </button>
-      <button
-        class="block min-w-3xs p-4 mx-auto bg-white hover:bg-red-700 focus:bg-red-700 border-2 border-red-700 text-xl text-red-700 hover:text-white focus:text-white tracking-widest cursor-pointer"
-        data-action="click->company-detail#confirmCompanyDestruction">
-        事業所を削除する
-      </button>
+      <%= button_tag "事業所から脱退する",
+            class: "#{designer.destructive_button(size: :lg)} min-w-3xs mx-auto mb-4",
+            data: { action: "click->company-detail#openCompanyExitDialog" } %>
+      <%= button_tag "事業所を削除する",
+            class: "#{designer.destructive_button(size: :lg)} min-w-3xs mx-auto",
+            data: { action: "click->company-detail#confirmCompanyDestruction" } %>
     </div>
     <dialog aria-labelledby="company-exit-dialog-label" class="mx-auto my-auto" data-company-detail-target="companyExitDialog">
       <% exitable = @user_exit.valid? %>
@@ -91,7 +87,7 @@
         <div class="flex space-x-4 justify-center">
           <% if exitable %>
             <%= form.submit "脱退",
-                  class: "block py-4 px-12 bg-white focus:bg-red-700 border-2 border-red-700 text-xl text-red-700 focus:text-white tracking-widest cursor-pointer disabled:cursor-not-allowed disabled:opacity-50",
+                  class: "#{designer.destructive_button(size: :lg)}",
                   data: { turbo_submits_with: "脱退中" } %>
           <% end %>
           <%= button_tag "キャンセル", type: "button", class: designer.secondary_button(size: :lg), data: { action: "click->company-detail#closeCompanyExitDialog" } %>
@@ -122,7 +118,7 @@
           </table>
           <div class="flex space-x-4 justify-center">
             <%= form.submit "削除",
-                  class: "block py-4 px-12 bg-white focus:bg-red-700 border-2 border-red-700 text-xl text-red-700 focus:text-white tracking-widest cursor-pointer disabled:cursor-not-allowed disabled:opacity-50",
+                  class: "#{designer.destructive_button(size: :lg)}",
                   data: { turbo_submits_with: "削除中" } %>
             <%= button_tag "キャンセル", type: "button", class: designer.secondary_button(size: :lg), data: { action: "click->company-detail#closeCompanyDestructionDialog" } %>
           </div>
